
[TestJSXTransformBasic/ElementWithMultipleProps - 1]
const elem = React.createElement("div", {className: "foo", id: "bar"});

---

[TestJSXTransformBasic/ElementWithTextChild - 1]
const elem = React.createElement("div", null, "Hello");

---

[TestJSXTransformBasic/NestedElements - 1]
const elem = React.createElement("div", null, React.createElement("span", null, "Hello"));

---

[TestJSXTransformBasic/DeeplyNestedElements - 1]
const elem = React.createElement("div", null, React.createElement("span", null, React.createElement("a", null, "Link")));

---

[TestJSXTransformBasic/MultipleChildren - 1]
const elem = React.createElement("div", null, React.createElement("span", null, "One"), React.createElement("span", null, "Two"));

---

[TestJSXTransformBasic/SelfClosingElement - 1]
const elem = React.createElement("div", null);

---

[TestJSXTransformBasic/ElementWithClosingTag - 1]
const elem = React.createElement("div", null);

---

[TestJSXTransformBasic/ElementWithStringProp - 1]
const elem = React.createElement("div", {className: "foo"});

---

[TestJSXTransformBasic/ElementWithExpressionProp - 1]
const name = "foo";
const elem = React.createElement("div", {className: name});

---

[TestJSXTransformBasic/ElementWithExpressionChild - 1]
const name = "World";
const elem = React.createElement("div", null, "Hello", name);

---

[TestJSXTransformFragment/NestedFragments - 1]
const elem = React.createElement(React.Fragment, null, React.createElement(React.Fragment, null, React.createElement("div", null)));

---

[TestJSXTransformFragment/EmptyFragment - 1]
const elem = React.createElement(React.Fragment, null);

---

[TestJSXTransformFragment/FragmentWithChildren - 1]
const elem = React.createElement(React.Fragment, null, React.createElement("div", null), React.createElement("span", null));

---

[TestJSXTransformFragment/FragmentWithTextAndElements - 1]
const elem = React.createElement(React.Fragment, null, "Hello", React.createElement("div", null), "World");

---

[TestJSXTransformComponent/ComponentWithoutProps - 1]
function MyComponent() {
  return React.createElement("div", null);
}
const elem = React.createElement(MyComponent, null);

---

[TestJSXTransformComponent/ComponentWithProps - 1]
function Button(temp1) {
  const props = temp1;
  return React.createElement("button", null, props.label);
}
const elem = React.createElement(Button, {label: "Click me"});

---

[TestJSXTransformComponent/NestedComponents - 1]
function Child() {
  return React.createElement("span", null, "Child");
}
function Parent() {
  return React.createElement("div", null, React.createElement(Child, null));
}
const elem = React.createElement(Parent, null);

---

[TestJSXTransformBasic/ElementWithBooleanShorthand - 1]
const elem = React.createElement("input", {disabled: true});

---

[TestJSXTransformSpread/SpreadPropsOnly - 1]
const props = {className: "foo", id: "bar"};
const elem = React.createElement("div", {...props});

---

[TestJSXTransformSpread/SpreadWithRegularProps - 1]
const props = {className: "foo"};
const elem = React.createElement("div", {...props, id: "bar"});

---

[TestJSXTransformSpread/MultipleSpreadProps - 1]
const props1 = {className: "foo"};
const props2 = {id: "bar"};
const elem = React.createElement("div", {...props1, ...props2});

---

[TestJSXTransformSpread/SpreadWithBooleanShorthand - 1]
const props = {className: "foo"};
const elem = React.createElement("input", {...props, disabled: true});

---

[TestJSXTransformComponent/MemberExpressionComponent - 1]
const elem = React.createElement(Icons.Star, {size: 24});

---
